--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "jQuery": "^2.2.1",
-    "socket.io-client": "^1.4.5"
+    "socket.io-client": "^1.4.5",
+    "underscore": "^1.8.3"
   }
 }
