--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongodb": "^2.1.7",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5"
-  }
+  },
+  "description": "Chat",
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "Vlad Paskar",
+  "license": "ISC"
 }
